Aggiornato parte 8 fine BE, da attivare e fixare spring security

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -12,6 +12,8 @@ spring.security.user.password=root
 #########mail properties#########################
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=25
-spring.mail.username=1e9ffd349a33ac
-spring.mail.password=34216b7df005e2
+spring.mail.username=4a69137ea0e588
+spring.mail.password=dae5ad78b19fc5
 spring.mail.protocol=smtp
+############ JWT Properties #####################
+jwt.expiration.time=900000
